fix location on tablet

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -121,13 +121,13 @@ h6 {
 }
 
 .location {
-  @screen sm {
+  @screen md {
     height: 375px;
   }
 }
 
 .location-card {
-  @screen sm {
+  @screen md {
     left: 10%;
     top: 50%;
     transform: translateY(-50%);
